5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1760_1580.log
== TEST (2019-05-29 11:40:26) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
i = 0
j = 0

while(i < size(notas)):
	if(nota[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
print(f, ap, rp)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:40:40) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
m = 0
i = 0
j = 0

while(i < size(notas)):
	if(nota[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
print(f, ap, rp)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:40:56) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
m = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
print(f, ap, rp)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:41:14) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
m = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	i = i + 1
print(f, ap, rp)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:43:47) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	i = i + 1
	
	if(notas[i] != -1):
		m = m + notas[i]
		
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:44:29) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		m = m + notas[i]

	i = i + 1
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:46:02) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:50:16) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(nomes[j])
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:50:22) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(nomes[j])
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:51:41) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:51:46) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- EXECUTION TIME:
0.455697
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:52:13) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:53:02) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
	elif(notas[1] < 6):
		rp = rp + 1
	
	
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- EXECUTION TIME:
0.452292
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:54:53) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[1] < 6):
		rp = rp + 1
		
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- EXECUTION TIME:
0.461009
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
11
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
11
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:36:32) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[1] < 6):
		rp = rp + 1
		
	if(notas[i] != -1):
		p = p + 1
		m = m + notas[i]
	i = i + 1
	
m = m/p

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- EXECUTION TIME:
0.490632
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
11
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
11
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:48:35) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		p = p + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		p = p + notas[i]
	elif(notas[i] >= 0):
		p = p + notas[i]
	i = i + 1

m = p/(ap+rp)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:48:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
m = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		p = p + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		p = p + notas[i]
	elif(notas[i] >= 0):
		p = p + notas[i]
	i = i + 1

m = p/(ap+rp)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(m,2))
print(nomes[j])


-- EXECUTION TIME:
0.50508
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
11.25
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:49:28) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		p = p + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		p = p + notas[i]
	elif(notas[i] >= 0):
		p = p + notas[i]
	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(p/(ap+rp),2))
print(nomes[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:49:37) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		p = p + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		p = p + notas[i]
	elif(notas[i] >= 0):
		p = p + notas[i]
	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(p/(ap+rp),2))
print(nomes[j])


-- EXECUTION TIME:
0.585533
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
11.25
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:49:41) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		p = p + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		p = p + notas[i]
	elif(notas[i] >= 0):
		p = p + notas[i]
	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(p/(ap+rp),2))
print(nomes[j])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:54:57) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
p = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		p = p + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		p = p + notas[i]
	elif(notas[i] >= 0):
		p = p + notas[i]
	i = i + 1
print(p)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(p/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:56:29) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1
print(p)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:56:54) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1
print(nt)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:56:58) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1
print(nt)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:57:29) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1
print(nt)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:57:33) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1
print(nt)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:57:44) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))


f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1
print(nt)
while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:58:16) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:58:19) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	elif(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.324767
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
11.25
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:59:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]

	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.324061
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
7.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:59:01) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]

	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:59:05) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]

	i = i + 1

while (notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.540361
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
7.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:00:40) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas))
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
File "XXXX", line 23
    if(notas[j] != max(notas))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:00:55) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
	j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
File "XXXX", line 24
    j = j + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:01:04) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:01:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
	elif(notas[1] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.497515
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
0
7.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:02:45) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1
	if

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.205934
-- ERROR:
  File "/home/codebench/codes/1760/1580/main.py", line 24
    if
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:03:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.523129
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
8
3.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
11
1.0
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
Notas: Nomes: 0
7
4
6.39
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:03:02) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:04:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1
	if(notas[i] >= 0):
		nt = nt + notas[i]
	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:04:38) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1
	if(notas[i] >= 0):
		nt = nt + notas[i]
	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.378803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1580/main.py", line 24, in <module>
    if(notas[i] >= 0):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:04:43) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	i = i + 1
	if(notas[i] >= 0):
		nt = nt + notas[i]
	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:06:10) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.492344
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
8
7.25
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
11
2.55
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
12.79
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:06:16) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
		
	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:06:27) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
		
	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.392676
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
8
7.25
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
11
2.55
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
12.79
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:06:28) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
		
	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:06:50) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6):
		rp = rp + 1
		nt = nt + notas[i]
		
	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:08:27) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		nt = nt + notas[i]
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1
		nt = nt + notas[i]
		
	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:09:17) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1

	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:09:29) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
nomes = array(eval(input("Nomes: ")))

f = 0
ap = 0
rp = 0
nt = 0
i = 0
j = 0

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
		
	if(notas[i] >= 6):
		ap = ap + 1
		
	if(notas[i] < 6 and notas[i] >= 0):
		rp = rp + 1

	if(notas[i] >= 0):
		nt = nt + notas[i]
	i = i + 1

	if(notas[j] != max(notas)):
		j = j + 1
	
print(f)
print(ap)
print(rp)
print(round(nt/(ap+rp),2))
print(nomes[j])



-- EXECUTION TIME:
0.425771
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
